# scripting

./: .gitignore  .travis.yml  README  setup.cfg  setup.py
doc/: Makefile  conf.py  index.rst  index.rst.bak  reference.rst
scripting/: __init__.py  bash.py  commands.py  runner.py  textprocessing.py  utils.py
scripting/tests/: test_commands.py  test_runner.py  test_source.py  test_textprocessing.py
scripting/tests/data/: testenv.sh
tests/: test_commands.py  test_runner.py  test_source.py  test_textprocessing.py
