[metadata]
name = scripting
version = 0.1
author = Gabriele Lanaro
author_email = gabriele.lanaro@gmail.com
description = A set of shell utilities that makes working on python scripts a breeze
home_page = 

classifier = License :: OSI Approved :: GNU General Public License (GPL)
    Development Status :: 1 - Planning

[files]

packages = scripting
